--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-vector-drawable:26.+'
+    compile 'com.android.support:cardview-v7:21.+'
+    compile 'com.android.support:recyclerview-v7:21.+'
     testCompile 'junit:junit:4.12'
 }
