--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
 
 
     <application
@@ -28,6 +30,7 @@
         <activity android:name=".RecyclerActivity"
             android:label="@string/title_social">
         </activity>
+
     </application>
 
 </manifest>
